--- a/iris.ipynb
+++ b/iris.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "149           5.9          3.0           5.1          1.8  virginica"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "       5.9, 5.7, 5.2, 5. , 5.2, 5.4, 5.1])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "       2.3, 2.5, 2.3, 1.9, 2. , 2.3, 1.8])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "(0.0, 4.0)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
        "(0.0, 4.0)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
        "(0.4157554163524113, -0.3630755213190291)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "(0.0, 4.0)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
        "(-1.0, 4.0)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
        "       [0.96286543, 1.        ]])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,11 +940,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "***\n",
+    "End"
+   ]
   }
  ],
  "metadata": {
